[metadata]
name = retflow
version = 0.0.1
authors =  Robin Yadav, Qi Yan
author_email = robin.yadav798@gmail.com
description = Flow matching for Retrosynthesis
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
url = https://github.com/DSL-Lab/flow_retro
project_urls =
    Bug Tracker = https://github.com/DSL-Lab/flow_retro/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[flake8]
max-line-length = 88
ignore = E501